Crash lasso-selecting hair particles in Cloth or Softbody Editing Type #80900

Closed
opened 2020-09-17 19:20:10 +02:00 by Rusty · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.22

Blender Version
Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: 0330d1af29
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash lasso-selecting hair particles in Cloth or Softbody Editing Type

Exact steps for others to reproduce the error
bug(maybe).blend

  • open file
  • select with the lasso select tool
  • crash
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.22 **Blender Version** Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: `0330d1af29` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash lasso-selecting hair particles in Cloth or Softbody Editing Type **Exact steps for others to reproduce the error** [bug(maybe).blend](https://archive.blender.org/developer/F8892776/bug_maybe_.blend) - open file - select with the lasso select tool - crash
Author

Added subscriber: @RustyExe

Added subscriber: @RustyExe
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

In the Tool options, set your Editing Type to Particles (was set to Cloth) and you should be good to go
image.png
(will remove that from the task description)

That crash I can confirm though, will check.

In the Tool options, set your Editing Type to `Particles` (was set to `Cloth`) and you should be good to go ![image.png](https://archive.blender.org/developer/F8892836/image.png) (will remove that from the task description) That crash I can confirm though, will check.
Author

This comment was removed by @RustyExe

*This comment was removed by @RustyExe*
Author

In #80900#1017905, @lichtwerk wrote:
In the Tool options, set your Editing Type to Particles (was set to Cloth) and you should be good to go
image.png
(will remove that from the task description)

That crash I can confirm though, will check.

thank you very much!!!

> In #80900#1017905, @lichtwerk wrote: > In the Tool options, set your Editing Type to `Particles` (was set to `Cloth`) and you should be good to go > ![image.png](https://archive.blender.org/developer/F8892836/image.png) > (will remove that from the task description) > > That crash I can confirm though, will check. thank you very much!!!
Philipp Oeser changed title from can't edit hair particles in particle edit mode to Crash lasso-selecting hair particles in Cloth or Softbody Editing Type 2020-09-17 19:53:42 +02:00
Philipp Oeser self-assigned this 2020-09-17 19:53:42 +02:00

This issue was referenced by df126861b2

This issue was referenced by df126861b25a51baf7d5eaea732a1e61b863af83
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80900
No description provided.